# GBServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GbMediaServer/: CMakeLists.txt  RTC_ISSUES.md  SwaggerComponent.hpp  build_standalone.ps1  diagnose_cmake.ps1  download_websocket_libs.ps1  download_websocket_libs.sh  fix_build.ps1  gb_media_server_log.h  gbmedia_server.yaml.example  main.cpp  rebuild_and_restart.ps1  reconfigure_cmake.ps1  test_cmake_config.ps1  verify_websocket_fix.ps1
GbMediaServer/consumer/: bandwidth_estimation.h  consumer.cpp  consumer.h  consumer_statistics.cpp  consumer_statistics.h  crtmp_consumer.cpp  crtmp_consumer.h  crtsp_consumer.cpp  crtsp_consumer.h  flv_consumer.cpp  flv_consumer.h  jitter_buffer.h  rtc_consumer.cpp  rtc_consumer.h  rtc_consumer_dtls.cpp  rtc_play_consumer.cpp  rtc_play_consumer.h  rtc_play_consumer_dtls.cpp
GbMediaServer/controller/: RtcApiController.hpp  RtcController.hpp  StaticController.hpp
GbMediaServer/dto/: PageDto.hpp  RtcApiDto.hpp  RtcDto.hpp
GbMediaServer/producer/: crtmp_producer.cpp  crtmp_producer.h  crtsp_producer.cpp  crtsp_producer.h  gb28181_producer.cpp  gb28181_producer.h  gb28181_push_producer.cpp  gb28181_push_producer.h  producer.cpp  producer.h  producer_statistics.cpp  producer_statistics.h  rtc_producer.cpp  rtc_producer.h  rtc_producer_dtls.cpp
GbMediaServer/server/: connection.cpp  connection.h  gb_media_service.cpp  gb_media_service.h  rtc_service.cpp  rtc_service.h  rtc_service_mgr.cpp  rtc_service_mgr.h  sessioin.cpp  session.h  stream.cpp  stream.h  web_service.cpp  web_service.h  web_service_handler.cpp  web_service_stats.cpp  ws_stats_service.cpp  ws_stats_service.h
GbMediaServer/service/: RtcApiService.cpp  RtcService.cpp  RtcService.hpp
GbMediaServer/share/: capture.cpp  capture.h  nack_generator.cpp  nack_generator.h  rtc_interface.cpp  rtc_interface.h  rtc_interface_sctp_handler.cpp  share_resource.cpp  share_resource.h  statistics_base.cpp  statistics_base.h  statistics_manager.cpp  statistics_manager.h
GbMediaServer/swagger/: AppComponent.hpp  DatabaseComponent.hpp
GbMediaServer/swagger/controller/: RtcApiController.hpp
GbMediaServer/swagger/dto/: RtcApiDto.hpp  StatusDto.hpp
GbMediaServer/swagger/service/: RtcApiService.cpp  RtcApiService.hpp
GbMediaServer/user/: gb28181_push_user.cpp  gb28181_push_user.h  play_rtc_user.cpp  play_rtc_user.h  player_user.cpp  player_user.h  rtc_play_user.cpp  rtc_play_user.h  rtc_play_user_dtls.cpp  user.cpp  user.h
GbMediaServer/utils/: file_log_writer.cpp  file_log_writer.h  json_utils.cpp  json_utils.h  string_utils.cpp  string_utils.h  time_corrector.cpp  time_corrector.h  yaml_config.cpp  yaml_config.h
GbSipServer/: AppComponent.hpp  CMakeLists.txt  DatabaseComponent.hpp  SwaggerComponent.hpp  gbsip_server_log.h  main.cpp  sip_server.cpp  sip_server.h
GbSipServer/controller/: DeviceController.hpp  StreamController.hpp
GbSipServer/db/: DeviceDb.hpp
GbSipServer/dto/: DeviceDto.hpp  StreamDto.hpp
GbSipServer/libsip/: CMakeLists.txt
GbSipServer/libsip/c-ares/: ares_setup.h
GbSipServer/libsip/eXosip2/: eXosip2.h
GbSipServer/libsip/osip2/: internal.h
GbSipServer/libsip/osipparser2/: internal.h  osip_const.h  osip_parser_cfg.c
GbSipServer/service/: DeviceServer.cpp  DeviceServer.hpp  DeviceService.cpp  StreamService.cpp  StreamService.hpp
GbSipServer/sql/: 002_init_device.sql
GbSipServer/swagger/: DatabaseComponent.hpp
GbSipServer/swagger/controller/: DeviceController.hpp
GbSipServer/swagger/db/: DeviceDb.hpp  UserDb.hpp
GbSipServer/swagger/dto/: DeviceDto.hpp  PageDto.hpp
GbSipServer/swagger/service/: DeviceServer.cpp
GbSipServer/utils/: Log.h  chttplib.cpp  chttplib.h  cmedia.h  yaml_config.cpp  yaml_config.h
Tools/: docker_install_start_mysql.sh  install_docker_ubuntu.sh  netstatus.sh  start.sh
WebServer/: build.sh  start.sh
WebServer/conf/: ca-secure.key  ca.crt  ca.key  framework.conf  nginx.conf  server.crt  server.csr  server.key
WebServer/src/framework/: init.go
WebServer/static/: index.html
WebServer/static/js/: pull.js  push.js
config/: gbmedia_server.yaml  gbsip_server.yaml
libsip/: CMakeLists.txt
libsip/c-ares/: ahost.c
libsip/osipparser2/: osip_const.h  osip_port.c
libswagger/: CMakeLists.txt
libswagger/dto/: DeviceDto.hpp  PageDto.hpp
media_api/: api.yaml
