project(GbServer)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS  "####################################")
MESSAGE(STATUS  "#############${PROJECT_NAME}###############")
MESSAGE(STATUS  "####################################")


set(DIR_NAME_GBServer  ${PROJECT_NAME})
 


add_subdirectory(GbSipServer) 